# practical-astronomy-python

./: .gitignore  CHANGELOG.md  Makefile  README.md  cli-test.sh  pa-cli.py  pyproject.toml  test-coordinate.py  test-date-of-easter.py  test-day-number.py  test-eclipses.py  test-julian.py  test-moon.py  test-planet-comet-binary.py  test-sun.py  test-time.py  test.py  test_coordinate.py  test_date_of_easter.py  test_day_number.py  test_eclipses.py  test_julian.py  test_moon.py  test_planet_comet_binary.py  test_sun.py  test_time.py
cli_lib/: pa_cli_datetime.py
docs/: README_8md.html  ____init_____8py.html  dir_45978790aec87fba6f3407586a078612.html  dir_45978790aec87fba6f3407586a078612.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_8ebb4883bd5210c1437544ca4cb0df32.html  files.html  files_dup.js  glossary_8md.html  index.html  md_src_glossary.html  menudata.js  namespacemembers.html  namespacemembers_b.html  namespacemembers_c.html  namespacemembers_d.html  namespacemembers_e.html  namespacemembers_f.html  namespacemembers_func.html  namespacemembers_func_b.html  namespacemembers_func_c.html  namespacemembers_func_d.html  namespacemembers_func_e.html  namespacemembers_func_f.html  namespacemembers_func_g.html  namespacemembers_func_h.html  namespacemembers_func_i.html  namespacemembers_func_j.html  namespacemembers_func_k.html  namespacemembers_func_l.html  namespacemembers_func_m.html  namespacemembers_func_n.html  namespacemembers_func_o.html  namespacemembers_func_p.html  (+69 more)
docs-gen/: Doxyfile  Makefile
lib/: README.md  (+5 more)
(+220 files in other folders)
